--- a/RQ3.ipynb
+++ b/RQ3.ipynb
@@ -112,15 +112,6 @@
     }
    ],
    "source": [
-    "# -*- coding: utf-8 -*-\n",
-    "\"\"\"\n",
-    "Created on Sun Oct 24 16:55:48 2018\n",
-    "\n",
-    "@author: Melis\n",
-    "\"\"\"\n",
-    "\n",
-    "# RQ3\n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np \n",
     "\n",
@@ -426,7 +417,7 @@
     "          +'('+Man_prm[0]+','+Man_prm[1]+','+Man_prm[2]+')') # You can comment this line out if you don't need title\n",
     "plt.show(fig)\n",
     "\n",
-    "\"\"\"It seems lognormal distribution totally fit the Manhattan taxi travel duration. \"\"\"\n",
+    "\"\"\"It seems beta distribution totally fit the Manhattan taxi travel duration. Also lognormal distribution is another good option with different parameters of course. \"\"\"\n",
     "\n",
     "\n",
     "\n",
@@ -452,7 +443,7 @@
     "          +'('+Brnx_prm[0]+','+Brnx_prm[1]+','+Brnx_prm[2]+')') # You can comment this line out if you don't need title\n",
     "plt.show(fig)\n",
     "\n",
-    "\"\"\"This time lognormal distribution almost fit the Bronx taxi travel duration. But if we compare with\n",
+    "\"\"\"This time the distribution almost fit the Bronx taxi travel duration. But if we compare with\n",
     "Manhattan, this one is close to fit it. \"\"\" \n",
     "\n",
     "\n",
@@ -479,9 +470,11 @@
     "          +'('+Bklyn_prm[0]+','+Bklyn_prm[1]+','+Bklyn_prm[2]+')') # You can comment this line out if you don't need title\n",
     "plt.show(fig)\n",
     "\n",
-    "\"\"\"Again lognormal distribution is the most close one to Brooklyn taxi travel duration data.\n",
-    "It seems perfect for our data. In addition to Manhattan, Brooklyn is also good example for \n",
-    "lognormal distribution. \"\"\" \n",
+    "\"\"\"Exponential normal distribution, it is also called exponentially modified Gaussian (EMG) distribution,\n",
+    "is the most close one to Brooklyn taxi travel duration data.\n",
+    "When we try more small data of Brooklyn lognormal also fit it. But we are trying to find best fit. \n",
+    "So, It seems perfect for our data. In addition to Manhattan, Brooklyn is also good example for \n",
+    "estimating distribution. \"\"\" \n",
     "\n",
     "\n",
     "\n",
@@ -508,8 +501,8 @@
     "          +'('+Qns_prm[0]+','+Qns_prm[1]+','+Qns_prm[2]+')') # You can comment this line out if you don't need title\n",
     "plt.show(fig)\n",
     "\n",
-    "\"\"\"Since the Queens data suddenly decreases until 25 minutes of travel duration, we got exponentially \n",
-    "normal distribution, it is also called exponentially modified Gaussian (EMG) distribution. We may say that\n",
+    "\"\"\"Since the Queens data does not has smooth distribution, the distribution that we guess is not perfectly fit it.\n",
+    "There are many rises and falls. Generally rayleigh and exponentially normal distribution can be good options. We may say that\n",
     "Queens is about to fit it. \"\"\" \n",
     "\n",
     "\n",
@@ -520,7 +513,8 @@
     "\n",
     "\"\"\"The last one is SwitchedBorough. That means we'll examine if the taxi goes from the borough to\n",
     "another borough. We expect that duration of trips will be long all the time. Hence, most probably\n",
-    "we won't get some right tail distribution like lognormal. \"\"\"\n",
+    "we get more close to belly shape because this time, unlike the trips inside the borough, we have data for long trips also.\n",
+    "It is expected that it is not right tailed distribution\"\"\"\n",
     "\n",
     "# SwitchedBorough\n",
     "SBoro_best_fit_name, SBoro_best_fit_prms = bestDist(SwitchedBorough, bins=200)\n",
@@ -544,14 +538,14 @@
     "          +'('+SBoro_prm[0]+','+SBoro_prm[1]+','+SBoro_prm[2]+')') # You can comment this line out if you don't need title\n",
     "plt.show(fig)\n",
     "\n",
-    "\"\"\"Since the trips are cumulated at some point, around 25 minutes, we got exponentially normal distribution.\n",
+    "\"\"\"Since the trips are cumulated at some point, around 25 minutes, we got more belly shape distribution.\n",
     "That make sense. Because it is easy to guess if you are switch the borough, it will take more time. So there\n",
-    "are no much data for short trip. Furthermore, exponentially normal is also good fit for the data. \"\"\"\n",
+    "are no much data for short trip. Furthermore, the best fit distribution is also good fit for the data. \"\"\"\n",
     "\n",
     "\n",
     "\"\"\"Therefore, generally we got right skewed distribution when taxi is in same borough. Data is right skewed\n",
-    "because generally people make short trips in NY. However if you switch your borough, there should be pile up.\n",
-    "Averagely It takes half an hour. \"\"\"\n",
+    "because generally people make short trips in their own borough. However if you switch your borough, it is normal there is \n",
+    "pile up and averagely it takes half an hour. \"\"\"\n",
     "\n"
    ]
   },
